Archive2/37/8b1b964bd97812/output
main.cpp:2:15: error: expected unqualified-id before '<<' token
               << std::is_constructible<Foo, int>::value << '\n'
               ^
